force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <description>One row per Employee x Leave Type x Year</description>
    <label>Leave Balance</label>
    <nameField>
        <displayFormat>LB-{00000}</displayFormat>
        <label>Leave Balance No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Balances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>