force-app/main/default/objects/Leave_Balance__c/fields/Accrual_Method__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Method__c</fullName>
    <description>Copied from the policy. Drives Accrued_Days__c through LeaveAccrualService. Blank is treated as no accrual.</description>
    <label>Accrual Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>