force-app/main/default/objects/Leave_Balance__c/fields/Accrued_Days__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Days__c</fullName>
    <description>Entitlement earned so far. Maintained by LeaveAccrualService - written by LeaveBalanceTrigger on every save and by the nightly sweep in LeaveManagementController.runDaily, which is what credits a monthly accrual when nobody has touched the record. Monthly accrual lands on the FIRST of the month for anyone who joined in an earlier year, and at month end for anyone who joined during the leave year (LEAVE-52). Was a formula until LEAVE-51. Never edit by hand: the next save recomputes it.</description>
    <label>Accrued to Date</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>