force-app/main/default/objects/Leave_Balance__c/fields/Accrued_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Accrued_To_Date__c</fullName>
    <label>Accrued to Date</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>