force-app/main/default/objects/Leave_Balance__c/fields/Available_Balance__c.field-meta.xml
<CustomField>
    <fullName>Available_Balance__c</fullName>
    <description>Accrued to Date + Carried In - Used. Availability is capped by accrual, not by full entitlement, which is what stops December&apos;s day being spent in January. Maintained by LeaveAccrualService alongside Accrued_To_Date__c - see that field for what writes it and when. Replaces the Available_Days__c formula. Never edit by hand - the next save recomputes it.</description>
    <label>Available Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>