force-app/main/default/objects/Leave_Balance__c/fields/Available_Days__c.field-meta.xml
<CustomField>
    <fullName>Available_Days__c</fullName>
    <description>SUPERSEDED by Available_Balance__c (LEAVE-51). Built on the legacy Accrued_Days__c formula, so it inherits the same one-day understatement for continuing employees. Kept only so nothing that still points at it breaks. Delete once reports and list views have been moved over.</description>
    <formula>BLANKVALUE(Accrued_Days__c,0) + BLANKVALUE(Carry_Over_Days__c,0) - BLANKVALUE(Used_Days__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Days (legacy formula)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>