force-app/main/default/objects/Leave_Balance__c/fields/Carry_Over_Days__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Days carried IN from the prior year, set once by the January grant. This is an input to Available = Accrued + Carried In - Used and is NOT decremented as days are taken, so it is not a remaining balance - see Carry Over Remaining for that. On 1 July the sweep reduces it to exactly the number of carried days that were consumed, which cancels those days against Used and drops the unused ones; a non-zero value after that date means days were taken, not days still available.</description>
    <label>Carried In Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>