force-app/main/default/objects/Leave_Balance__c/fields/Carry_Over_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Expiry__c</fullName>
    <description>Carry-over lapses after this date. June 30 under current policy.</description>
    <label>Carry Over Expiry</label>
    <type>Date</type>
</CustomField>