force-app/main/default/objects/Leave_Balance__c/fields/Carry_Over_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Carry_Over_Remaining__c</fullName>
    <description>Carried days still available to spend, which is what a column labelled Carry Over is read as meaning. Carried In Days is an input to the availability formula and is not decremented as days are taken, so on its own it overstates what is left: 6 carried with 4 taken still reads 6, while this reads 2. Floored at zero, because once the carried days are gone further requests spend the current year and must not drive this negative. From 1 July it reads zero for everybody, the carried bucket having been emptied by the June sweep.</description>
    <formula>MAX(0, BLANKVALUE(Carry_Over_Days__c, 0) - BLANKVALUE(Used_Days__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carry Over Remaining</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>