force-app/main/default/objects/Leave_Balance__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of this balance. Lookup rather than master-detail because User cannot be a master object. Not required at field level: Salesforce forbids restrict/cascade delete on a User lookup, and a required lookup demands one of them. Required-ness is enforced by the Employee_Required validation rule instead.</description>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Leave Balances</relationshipLabel>
    <relationshipName>Leave_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>