force-app/main/default/objects/Leave_Balance__c/fields/Entitlement_Days__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Days__c</fullName>
    <description>Days granted for this type and year. Copied from the policy, except Refreshment Leave which is resolved from Refresh_Leave_Rule__mdt by tenure.</description>
    <label>Entitlement Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>