force-app/main/default/objects/Leave_Balance__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Whole-balance expiry. Refreshment Leave is granted on the anniversary and wiped one month later.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>