force-app/main/default/objects/Leave_Balance__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>EmployeeId-LeaveType-Year. Makes the grant job an idempotent upsert and blocks duplicate rows.</description>
    <label>External Key</label>
    <externalId>true</externalId>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>