force-app/main/default/objects/Leave_Balance__c/fields/Granted_On__c.field-meta.xml
<CustomField>
    <fullName>Granted_On__c</fullName>
    <description>Date the grant engine populated this row&apos;s entitlement. Idempotency guard for LeaveManagementController: a row with a value here is not granted again. Replaces Annual_Leave_Granted_Year__c and Refresh_Leave_Granted_Year__c on User, which cannot be used any more - writing a guard on User (a setup object) in the same transaction as a Leave_Balance__c write would throw MIXED_DML_OPERATION. Blank means entitlement has not been granted for this type and year yet, which is the normal state for a Refreshment row before the anniversary.</description>
    <label>Granted On</label>
    <type>Date</type>
</CustomField>