force-app/main/default/objects/Leave_Balance__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <description>True while the employee is in probation and this type is probation-locked.</description>
    <label>Is Locked</label>
    <formula>AND( Locked_During_Probation__c, NOT(ISBLANK(Employee__r.Probation_End_Date__c)), Employee__r.Probation_End_Date__c &gt;= TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>