force-app/main/default/objects/Leave_Balance__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <description>Copied from Leave_Type_Policy__mdt.Leave_Type__c, which must itself match the ApplicationItem__c.Request_Type__c picklist API value exactly. Text rather than a second picklist so there is only one place to maintain the list.</description>
    <label>Leave Type</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>