force-app/main/default/objects/Leave_Balance__c/fields/Leave_Year__c.field-meta.xml
<CustomField>
    <fullName>Leave_Year__c</fullName>
    <description>Calendar year for most types; the anniversary year for Refreshment Leave.</description>
    <label>Leave Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>