force-app/main/default/objects/Leave_Balance__c/fields/Lock_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lock_Reason__c</fullName>
    <description>UI message shown beside a locked balance.</description>
    <formula>IF( Is_Locked__c, &quot;Not available during the probation period&quot;, &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lock Reason</label>
    <type>Text</type>
</CustomField>