force-app/main/default/objects/Leave_Balance__c/fields/Locked_During_Probation__c.field-meta.xml
<CustomField>
    <fullName>Locked_During_Probation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked During Probation</label>
    <type>Checkbox</type>
</CustomField>