force-app/main/default/objects/Leave_Balance__c/fields/Pending_Days__c.field-meta.xml
<CustomField>
    <fullName>Pending_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Submitted but not yet approved. Without this, two pending requests can each pass the balance check.</description>
    <label>Pending Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>