force-app/main/default/objects/Leave_Balance__c/fields/Used_Days__c.field-meta.xml
<CustomField>
    <fullName>Used_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Approved days consumed. Maintained by ApplicationItemTriggerLogic.</description>
    <label>Used Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>