force-app/main/default/objects/Leave_Balance__c/validationRules/Employee_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Required</fullName>
    <active>true</active>
    <description>Employee__c cannot be marked required at field level because Salesforce forbids restrict/cascade delete on a lookup to User. This rule provides the equivalent guarantee, and unlike a layout setting it applies to Apex and the API too.</description>
    <errorConditionFormula>ISBLANK(Employee__c)</errorConditionFormula>
    <errorDisplayField>Employee__c</errorDisplayField>
    <errorMessage>Employee is required on a Leave Balance.</errorMessage>
</ValidationRule>