force-app/main/default/objects/Leave_Balance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Available_Balance__c</columns>
    <columns>Carry_Over_Days__c</columns>
    <columns>Used_Days__c</columns>
    <columns>Entitlement_Days__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>Accrued_To_Date__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Carry_Over_Expiry__c</columns>
    <columns>Accrual_Method__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>